# ennam

./: .gitignore  .gitmodules  AGENTS.md
android/: build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
android/app/src/main/java/com/ennam/app/: MainActivity.kt
android/app/src/main/java/com/ennam/app/data/db/: AppDatabase.kt  Converters.kt  EntryDao.kt
android/app/src/main/java/com/ennam/app/data/model/: Category.kt  Entry.kt  EntryFts.kt
android/app/src/main/java/com/ennam/app/data/repository/: EntryRepository.kt
android/app/src/main/java/com/ennam/app/ml/: Classifier.kt  ClusterEngine.kt  Embedder.kt  LlamaEngine.kt
android/app/src/main/java/com/ennam/app/ui/components/: CategoryTabs.kt  EntryCard.kt
android/app/src/main/java/com/ennam/app/ui/feed/: FeedScreen.kt  FeedViewModel.kt
android/app/src/main/java/com/ennam/app/ui/input/: InputSheet.kt
android/app/src/main/java/com/ennam/app/ui/search/: SearchBar.kt  SearchViewModel.kt
android/app/src/main/res/values/: themes.xml
models/: download.sh
